src/test/test-models/bad/compound-assign/plus_equals_matrix_array.stan
generated quantities {
  matrix[1,2] x[3] = {[[1, 2, 3]], [[1, 2, 3]], [[1, 2, 3]]};
  matrix[1,2] y[3] = {[[4, 5, 6]], [[4, 5, 6]], [[4, 5, 6]]};
  x[1,1] += y[1,1];
  x += y;
}
